tests/fixtures/invalid/bytes_rshift_none.py
# Cannot right shift Bytes and None
x: bytes = b"hello" >> None
